[package]
name = "picsart"
version = "0.0.1"
edition = "rc1"
license = "WTFPL OR Apache-2.0"
description = "High-performance pure Rust image merge and optimization library"
repository = "https://github.com/abrfanet/picsart"
homepage = "https://github.com/abrfanet/picsart"
documentation = "https://docs.rs/tough_image"
readme = "README.md"
keywords = ["image", "merge", "compression", "optimization", "pure-rust"]
categories = ["multimedia::images"]
authors = ["Mohammad Mahmoodi <mm580486@gmail.com>"]
rust-version = "1.93.0"
exclude = [
    "examples/*",
    "tests/assets/*",
    ".github/*"
]

[lib]
name = "tough_image"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["parallel"]

# Enable rayon-based parallel processing
parallel = ["dep:rayon"]

# Future-proof feature example
simd = []

[dependencies]
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }

rayon = { version = "1.8", optional = true }

[dev-dependencies]
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
